fix: update user count display format in starter pack selection

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -167,7 +167,7 @@
                     <div class="pack-info">
                       <span class="pack-title">{{ pack.title }}</span>
                       <span class="pack-description">{{ pack.description }}</span>
-                      <span class="pack-users">{{ pack.pubkeys.length }} users</span>
+                      (<span class="pack-users">{{ pack.pubkeys.length }} users</span>)
                     </div>
                   </div>
                 </mat-option>
