feat: enhance user profile loading in new column dialog with real data and caching

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -127,7 +127,7 @@
                   <div class="user-option">
                     <div class="user-info">
                       <span class="user-name">{{ user.name || 'Unknown' }}</span>
-                      <span class="user-npub">{{ user.npub }}</span>
+                      (<span class="user-npub">{{ user.npub }}</span>)
                     </div>
                   </div>
                 </mat-option>
